Completed portfolio page project

--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
       </div>
       <div id="about" class="row justify-evenly align-center pb-50 about-section">
         <h1 class="col-12">ABOUT ME</h1>
-        <img alt="Sara Choi Portrait" src="/assets/sara-choi.jpeg" class="col-3 about-image">
+        <img alt="Sara Choi Portrait" src="assets/sara-choi.jpeg" class="col-3 about-image">
         <div class="col-5 text-align-reset">
           <p>I'm a web developer student that likes to learn new things. </p>
         </div>
       </div>
       <div id="tech" class="row justify-evenly pb-50 tech-section">
         <h1 class="col-12">TECHNOLOGIES</h1>
-        <img alt="HTML5 logo" src="/assets/html-logo.png" class="col-1">
-        <img alt="CSS3 logo" src="/assets/css-logo.png" class="col-1">
-        <img alt="Javascript logo" src="/assets/js-logo.png" class="col-1">
+        <img alt="HTML5 logo" src="assets/html-logo.png" class="col-1">
+        <img alt="CSS3 logo" src="assets/css-logo.png" class="col-1">
+        <img alt="Javascript logo" src="assets/js-logo.png" class="col-1">
       </div>
       <div id="projects" class="row justify-evenly pb-50 projects-section">
         <h1 class="col-12">MY PROJECTS</h1>
-        <img alt="Harry potter project" src="/assets/harry-potter.png" class="col-2">
-        <img alt="Pokemon Project" src="/assets/pokemon.png" class="col-2">
-        <img alt="Princess leia Project" src="/assets/leia.png" class="col-2">
+        <img alt="Harry potter project" src="assets/harry-potter.png" class="col-2">
+        <img alt="Pokemon Project" src="assets/pokemon.png" class="col-2">
+        <img alt="Princess leia Project" src="assets/leia.png" class="col-2">
       </div>
       <div id="contact" class="row justify-center pb-50 white-text contact-section">
         <h1 class="col-12">CONTACT ME</h1>
